[package]
name = "shelf"
version = "0.1.0"
authors = ["TheOnAndOnlyZenomat <adrsrv@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shelf_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "shelf"
path = "src/main.rs"

[dependencies]
crossterm = "0.18"
rusqlite = "0.24.2"
clap = "2.33.3"